[gd_scene load_steps=14 format=2]

[ext_resource path="res://nodes/monsters/Limbo.gd" type="Script" id=1]
[ext_resource path="res://gfx/monsters.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 48, 32, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "wet",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 128.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.04822
height = 12.0

[node name="Limbo" type="KinematicBody2D" groups=[
"monster",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 5 )
frame = 1
playing = true

[node name="DetectRadius" type="Area2D" parent="."]
visible = false

[node name="Collisionshape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 6 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 7.62939e-06, 2.11588 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.62939e-06, 2.11588 )
shape = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -8.0
margin_top = -16.0
margin_right = 8.0
margin_bottom = 16.0
color = Color( 0.247059, 0.254902, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
